# automating-discobolo

./: .gitignore  README.md  backup_files.py  bank_movements_download.py  check_and_remount.sh  config.py  create_payments.py  create_transactions_numbers.py  debug_log.txt  debug_movimientos.html  discobolo_cli.py  dni_extract_practice.py  email_sending_automate.py  extra_functions.py  filter_payments.py  jefe_de_grupo_update.py  loading_excel.py  main_script.sh  morosos_download.py  morosos_update.py  mountG.sh  payment_load_function.py  payments.xlsx  practice.py  pyproject.toml  recipients.xlsx  recurrentes_pivoted.xlsx  requirements.txt  roadmap.sh  script.py  sytechAutomate.py  sytech_automate.py  sytech_utomate.py  transfer_file_update.py  updateExcel.py  update_bank_file.py
backups/: master_backup_2025-02-16.xlsx  master_backup_2025-02-26.xlsx  master_backup_2025-02-27.xlsx  master_backup_2025-02-28.xlsx  master_backup_2025-03-01.xlsx  master_backup_2025-03-02.xlsx  master_backup_2025-03-05.xlsx  master_backup_2025-03-06.xlsx  transfer_file_2025-03-05.xlsx  transfer_file_2025-03-06.xlsx  transfer_file_2025-03-09.xlsx
config/: config.py  requirements.txt
data/backups/: master_backup_2025-03-03.xlsx  master_backup_2025-03-08.xlsx  (+2 more)
discobolo/: cli.py
scripts/: backup_files.py  bank_movements_download.py  check_and_remount.sh  email_sending_automate.py  extra_functions.py  jefe_de_grupo_update.py  morosos_download.py  morosos_update.py  payment_load_function.py  recurrentes_download.py  recurrentes_update.py  sytech_automate.py  transfers_download.py  transfers_download_renaming.py  transfers_update.py  transfers_update_2.py  verifying_sequence_numbers.py  whatsapp_automate.py
(+25 files in other folders)
